@@ -1,11 +1,10 @@
 package com.github.scribejava.apis;
 
-import com.github.scribejava.apis.service.OdnoklassnikiServiceImpl;
+import com.github.scribejava.apis.service.OdnoklassnikiOAuthService;
 import com.github.scribejava.core.builder.api.ClientAuthenticationType;
 import com.github.scribejava.core.builder.api.DefaultApi20;
 import com.github.scribejava.core.builder.api.OAuth2SignatureType;
 import com.github.scribejava.core.model.OAuthConfig;
-import com.github.scribejava.core.oauth.OAuth20Service;
 
 public class OdnoklassnikiApi extends DefaultApi20 {
 
@@ -31,8 +30,8 @@ public class OdnoklassnikiApi extends DefaultApi20 {
     }
 
     @Override
-    public OAuth20Service createService(OAuthConfig config) {
-        return new OdnoklassnikiServiceImpl(this, config);
+    public OdnoklassnikiOAuthService createService(OAuthConfig config) {
+        return new OdnoklassnikiOAuthService(this, config);
     }
 
     @Override
