@@ -1,0 +1,19 @@
+package com.github.scribejava.apis.service;
+
+import com.github.scribejava.core.builder.api.DefaultApi20;
+import com.github.scribejava.core.model.OAuthConfig;
+import com.github.scribejava.core.model.OAuthConstants;
+import com.github.scribejava.core.model.OAuthRequest;
+import com.github.scribejava.core.oauth.OAuth20Service;
+
+public class TutByOAuthService extends OAuth20Service {
+
+    public TutByOAuthService(DefaultApi20 api, OAuthConfig config) {
+        super(api, config);
+    }
+
+    @Override
+    public void signRequest(String accessToken, OAuthRequest request) {
+        request.addQuerystringParameter(OAuthConstants.TOKEN, accessToken);
+    }
+}
