@@ -2,18 +2,15 @@ package com.github.scribejava.apis.service;
 
 import com.github.scribejava.core.builder.api.DefaultApi20;
 import com.github.scribejava.core.model.OAuthConfig;
-import com.github.scribejava.core.model.OAuthConstants;
-import com.github.scribejava.core.model.OAuthRequest;
-import com.github.scribejava.core.oauth.OAuth20Service;
 
-public class TutByOAuthServiceImpl extends OAuth20Service {
+/**
+ *
+ * @deprecated renamed to {@link TutByOAuthService}
+ */
+@Deprecated
+public class TutByOAuthServiceImpl extends TutByOAuthService {
 
     public TutByOAuthServiceImpl(DefaultApi20 api, OAuthConfig config) {
         super(api, config);
-    }
-
-    @Override
-    public void signRequest(String accessToken, OAuthRequest request) {
-        request.addQuerystringParameter(OAuthConstants.TOKEN, accessToken);
     }
 }
