@@ -11,6 +11,7 @@
    Remove signRequest from abstract OAuthService. 2.0 and 1.0a will be a bit more different now.
  * drop toString method from *Tokens to prevent leak of sensible data (token ans secrets) (thanks to https://github.com/rcaa)
  * add Apache HttpComponents HttpClient support in separate module (thanks to https://github.com/sschwieb)
+ * add support for appsecret_proof in Facebook
 
 [4.2.0]
  * DELETE in JdkClient permits, but not requires payload (thanks to https://github.com/miguelD73)
